--- a/debs-builder-docker/Dockerfile.debbld
+++ b/debs-builder-docker/Dockerfile.debbld
@@ -22,7 +22,14 @@ RUN apt-get update
 VOLUME [ "/sys/fs/cgroup" ]
 
 RUN apt-get update \
-    && apt-get install --no-install-recommends -y apt-utils sudo vim dpkg-dev devscripts gawk coreutils equivs git
+    && apt-get install --no-install-recommends -y apt-utils sudo vim dpkg-dev devscripts gawk coreutils equivs git curl
+
+RUN curl -sL https://deb.nodesource.com/setup_16.x | bash -
+
+RUN apt-get update \
+    && apt-get install --no-install-recommends -y nodejs
+
+RUN npm install -g @angular/cli
 
 SHELL ["/bin/bash", "-c"]
 
