Use android.hardware.wifi@1.0-service
android.hardware.wifi@1.0-service is now a soong module. So the apex can
embed it directly.

Bug: 240099735
Test: CtsWifiTestCases
Change-Id: I9d5246341ada9ed4cb7da961d03b658200e08dda

--- a/apex/com.google.cf.wifi_hwsim/com.google.cf.wifi_hwsim.rc
+++ b/apex/com.google.cf.wifi_hwsim/com.google.cf.wifi_hwsim.rc
@@ -28,7 +28,7 @@ service hostapd /apex/com.android.wifi.hal/bin/hw/hostapd_cf
     disabled
     oneshot
 
-service vendor.wifi_hal_legacy /apex/com.android.wifi.hal/bin/hw/android.hardware.wifi@1.0-service_cf
+service vendor.wifi_hal_legacy /apex/com.android.wifi.hal/bin/hw/android.hardware.wifi@1.0-service
     interface android.hardware.wifi@1.0::IWifi default
     interface android.hardware.wifi@1.1::IWifi default
     interface android.hardware.wifi@1.2::IWifi default
