--- a/.github/workflows/test_build_deb_go1_13.yaml
+++ b/.github/workflows/test_build_deb_go1_13.yaml
@@ -5,12 +5,9 @@ on: [pull_request, push]
 jobs:
   build:
     runs-on: ubuntu-18.04
-    container:
-      # don't forget to also update debs-builder-docker/Dockerfile.debbld when updating this base image
-      image: debian@sha256:6a8bad8d20e1ca5ecbb7a314e51df6fca73fcce19af2778550671bdd1cbe7b43 # aka stable-20211011
     steps:
-    - name: setup apt
-      run: apt update -y && apt upgrade -y
+      # - name: setup apt
+      #   run: apt update -y && apt upgrade -y
     - name: install debuild dependencies
       run: apt install -y git devscripts config-package-dev debhelper-compat golang
     - name: checkout repository
