--- a/.github/workflows/test_build_deb_go1_13.yaml
+++ b/.github/workflows/test_build_deb_go1_13.yaml
@@ -9,7 +9,7 @@ jobs:
       # - name: setup apt
       #   run: apt update -y && apt upgrade -y
     - name: install debuild dependencies
-      run: apt install -y git devscripts config-package-dev debhelper-compat golang
+      run: sudo apt install -y git devscripts config-package-dev debhelper-compat golang
     - name: checkout repository
       uses: actions/checkout@a81bbbf8298c0fa03ea29cdc473d45769f953675 # aka v2
       with:
