--- a/.github/workflows/test_build_deb_go1_13.yaml
+++ b/.github/workflows/test_build_deb_go1_13.yaml
@@ -19,6 +19,6 @@ jobs:
     - name: build debian package
       run: cd android-cuttlefish && debuild -i -us -uc -b
     - name: install base debian package
-      run: dpkg -i cuttlefish-base_*_*64.deb || apt-get install -f -y
+      run: sudo dpkg -i cuttlefish-base_*_*64.deb || sudo apt-get install -f -y
     - name: install common debian package
-      run: dpkg -i cuttlefish-common_*_*64.deb || apt-get install -f -y
+      run: sudo dpkg -i cuttlefish-common_*_*64.deb || sudo apt-get install -f -y
