--- a/.github/workflows/test_build_deb_go1_13.yaml
+++ b/.github/workflows/test_build_deb_go1_13.yaml
@@ -6,11 +6,13 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     steps:
+    - name: go version first
+      run: go version
       # - name: setup apt
       #   run: apt update -y && apt upgrade -y
     - name: install debuild dependencies
-      run: sudo apt install -y git devscripts config-package-dev debhelper-compat golang-1.13
-    - name: go version
+      run: sudo apt install -y config-package-dev debhelper-compat golang-1.13
+    - name: go version second
       run: go version
     - name: checkout repository
       uses: actions/checkout@a81bbbf8298c0fa03ea29cdc473d45769f953675 # aka v2
