--- a/.github/workflows/test_build_deb_go1_13.yaml
+++ b/.github/workflows/test_build_deb_go1_13.yaml
@@ -11,9 +11,7 @@ jobs:
     - name: setup apt
       run: apt update -y && apt upgrade -y
     - name: install debuild dependencies
-      run: apt install -y devscripts config-package-dev debhelper-compat golang-1.13
-    - name: go version third 
-      run: go version
+      run: apt install -y git devscripts config-package-dev debhelper-compat golang-1.13
     - name: checkout repository
       uses: actions/checkout@a81bbbf8298c0fa03ea29cdc473d45769f953675 # aka v2
       with:
