Add web ui build sequences in debian package declaration
Bug: 238979920
Change-Id: I36dc5fd12798894727c636158b92b4a267a8129b

--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,8 @@ Section: misc
 Priority: optional
 Build-Depends: config-package-dev,
                debhelper-compat (= 12),
-               golang (>= 2:1.13~) | golang-1.13
+               golang (>= 2:1.13~) | golang-1.13,
+               nodejs (>= 16)
 Standards-Version: 4.5.0
 
 Package: cuttlefish-base
