--- a/.github/workflows/test_build_deb.yaml
+++ b/.github/workflows/test_build_deb.yaml
@@ -20,6 +20,6 @@ jobs:
     - name: build debian package
       run: cd android-cuttlefish && debuild -i -us -uc -b
     - name: install base debian package
-      run: dpkg -i cuttlefish-base_*_*64.deb || apt-get install -f -y cuttlefish-base
+      run: dpkg -i cuttlefish-base_*_*64.deb || apt-get install -y cuttlefish-base
     - name: install common debian package
       run: dpkg -i cuttlefish-common_*_*64.deb || apt-get install -f -y cuttlefish-common
