--- a/.github/workflows/test_build_deb.yaml
+++ b/.github/workflows/test_build_deb.yaml
@@ -17,9 +17,11 @@ jobs:
       uses: actions/checkout@a81bbbf8298c0fa03ea29cdc473d45769f953675 # aka v2
       with:
         path: "android-cuttlefish"
+    - name: pwd_1
+      run: pwd
     - name: build debian package
-      run: cd android-cuttlefish && debuild -i -us -uc -b
-    - name: install base debian package
-      run: apt-get install -y cuttlefish-base_*_*64.deb 
+      run: cd android-cuttlefish && pwd && debuild -i -us -uc -b && apt-get install -y ../cuttlefish-base_*_*64.deb
+    - name: pwd_2
+      run: pwd
     - name: install common debian package
-      run: apt-get install -y cuttlefish-common_*_*64.deb
+      run: apt-get install -y '../cuttlefish-common_*_*64.deb'
