--- a/debian/control
+++ b/debian/control
@@ -4,8 +4,7 @@ Section: misc
 Priority: optional
 Build-Depends: config-package-dev,
                debhelper-compat (= 12),
-               golang (>= 2:1.13~) | golang-1.13,
-               nodejs (>= 16)
+               golang (>= 2:1.13~) | golang-1.13
 Standards-Version: 4.5.0
 
 Package: cuttlefish-base
