remove redundant hooks

--- a/host/frontend/operator/webui/package.json
+++ b/host/frontend/operator/webui/package.json
@@ -9,11 +9,7 @@
     "test": "ng test",
     "lint": "gts lint",
     "clean": "gts clean",
-    "compile": "tsc",
-    "fix": "gts fix",
-    "prepare": "npm run compile",
-    "pretest": "npm run compile",
-    "posttest": "npm run lint"
+    "fix": "gts fix"
   },
   "private": true,
   "dependencies": {
