webui needs curl

--- a/debian/control
+++ b/debian/control
@@ -3,6 +3,7 @@ Maintainer: Cuttlefish Team
 Section: misc
 Priority: optional
 Build-Depends: config-package-dev,
+               curl,
                debhelper-compat (= 12),
                golang (>= 2:1.13~) | golang-1.13
 Standards-Version: 4.5.0
