--- a/host/frontend/operator/webui/package.json
+++ b/host/frontend/operator/webui/package.json
@@ -33,13 +33,13 @@
     "@angular/compiler-cli": "^14.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^18.0.6",
+    "gts": "^4.0.0",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.7.2",
-    "gts": "^3.1.0"
+    "typescript": "~4.7.2"
   }
 }
