--- a/.github/workflows/test_build_deb.yaml
+++ b/.github/workflows/test_build_deb.yaml
@@ -17,9 +17,11 @@ jobs:
       uses: actions/checkout@a81bbbf8298c0fa03ea29cdc473d45769f953675 # aka v2
       with:
         path: "android-cuttlefish"
-    - name: build debian package
-      run: cd android-cuttlefish && debuild -i -us -uc -b
+    - name: build base debian package
+      run: cd android-cuttlefish/base && debuild -i -us -uc -b
     - name: install base debian package
-      run: dpkg -i cuttlefish-base_*_*64.deb || apt-get install -f -y
-    - name: install common debian package
-      run: dpkg -i cuttlefish-common_*_*64.deb || apt-get install -f -y
+      run: dpkg -i android-cuttlefish/cuttlefish-base_*_*64.deb || apt-get install -f -y
+    - name: build frontend debian packages
+      run: cd android-cuttlefish/frontend && debuild -i -us -uc -b
+    - name: install user debian package
+      run: dpkg -i android-cuttlefish/cuttlefish-user_*_*64.deb || apt-get install -f -y
