format/lint the code

--- a/frontend/src/operator/webui/angular.json
+++ b/frontend/src/operator/webui/angular.json
@@ -61,7 +61,7 @@
               "namedChunks": true
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "production"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
