--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,3 +1,5 @@
 /src/host-orchestrator/host-orchestrator
+/src/host-orchestrator/cmd/cvdserver-bootstrapper/cvdserver-bootstrapper
 /src/operator/operator
+
 
