--- a/frontend/debian/rules
+++ b/frontend/debian/rules
@@ -19,7 +19,7 @@ include /usr/share/dpkg/buildflags.mk
 GOUTIL := src/goutil
 LIBOPERATOR_SOURCE_DIR := src/liboperator
 ORCHESTRATOR_SOURCE_DIR := src/host_orchestrator
-CVDSERVER_BOOTSTRAPPER_SOURCE_DIR := src/cvdserver-bootstrapper
+CVDSERVER_BOOTSTRAPPER_SOURCE_DIR := src/cvdserver_bootstrapper
 OPERATOR_SOURCE_DIR := src/operator
 BUILD_WEBUI := ./build-webui.sh
 
@@ -39,10 +39,10 @@ override_dh_auto_test:
 override_dh_installinit:
 	dh_installinit --name=cuttlefish-operator
 	dh_installinit --name=cuttlefish-host_orchestrator
-	dh_installinit --name=cuttlefish-cvdserver-bootstrapper
+	dh_installinit --name=cuttlefish-cvdserver_bootstrapper
 	dh_installinit
 
 override_dh_auto_clean:
 	rm -f $(ORCHESTRATOR_SOURCE_DIR)/host_orchestrator
-	rm -f $(CVDSERVER_BOOTSTRAPPER_SOURCE_DIR)/cvdserver-bootstrapper
+	rm -f $(CVDSERVER_BOOTSTRAPPER_SOURCE_DIR)/cvdserver_bootstrapper
 	dh_auto_clean
