Revert "Allow targets deriving from CF choosing the interface to setup wifi on."
This reverts commit dccf382a8cd8358033dd02e28b1d050dfcd44262.

Reason for revert: b/253103363 - broken wifi on arm64 CF

Change-Id: I495c2e72d2861713a48ac39f23def53bfafd32c2

--- a/shared/config/init.vendor.rc
+++ b/shared/config/init.vendor.rc
@@ -55,7 +55,7 @@ on post-fs
     # set RLIMIT_MEMLOCK to 64MB
     setrlimit 8 67108864 67108864
 
-on post-fs-data && property:ro.vendor.disable_rename_eth0=
+on post-fs-data
     # works around framework netiface enumeration issue
     # TODO(b/202731768): Add this `start rename_eth0` command to the init.rc for rename_netiface
     start rename_eth0
