Introduce otheros fuchsia support
Added specific flags and build mechanism for fuchsia.

Test: Build fuchsia locally and launch_cvd
-fuchsia_multiboot_bin_path=<multiboot.bin path> -fuchsia_zedboot_path=<zedboot.zbi path>
Test: Build linux locally and launch_cvd
-linux_multiboot_bin_path=<multiboot.bin path> -linux_zedboot_path=<zedboot.zbi path>
Test: launch Android using default launch_cvd
Bug: 227660047
Change-Id: Ifef0fdaaaeafc5b73561981e92ca9363a58f9471
Signed-off-by: Dmitrii Merkurev <dimorinny@google.com>

--- a/shared/config/grub.cfg
+++ b/shared/config/grub.cfg
@@ -33,11 +33,25 @@ if [ $? = 0 ]; then
   normal_exit
 fi
 
-# Fall back if we couldn't chain to another GRUB install
-set timeout=0
-menuentry "Linux" {
-  linux /vmlinuz $cmdline root=$rootfs
-  if [ -e /initrd.img ]; then
-    initrd /initrd.img
-  fi
-}
+# Detect fuchsia boot flow
+search --file /zedboot.zbi --hint (hd0,gp1)
+if [ $? = 0 ]; then
+  set timeout=0
+  menuentry "Fuchsia" {
+    insmod /EFI/modules/multiboot.mod
+    multiboot /multiboot.bin
+    module /zedboot.zbi
+  }
+fi
+
+# Detect linux boot flow
+search --file /vmlinuz --hint (hd0,gp1)
+if [ $? = 0 ]; then
+  set timeout=0
+  menuentry "Linux" {
+    linux /vmlinuz $cmdline root=$rootfs
+    if [ -e /initrd.img ]; then
+      initrd /initrd.img
+    fi
+  }
+fi
